--- a/css/main.css
+++ b/css/main.css
@@ -238,14 +238,14 @@ a {
 	text-decoration: none;
 	color: #0a4baa;
 }
-
+/*
 a:visited {
 	color: #05327d;
 }
 
 a:hover {
 	color: #507dbe;
-}
+}*/
 
 
 /* =============================================================================
