--- a/css/main.css
+++ b/css/main.css
@@ -233,7 +233,7 @@ hr {
 /* =============================================================================
    4.2  Links
    ========================================================================== */
-/*
+
 a {
 	text-decoration: none;
 	color: #0a4baa;
@@ -245,7 +245,7 @@ a:visited {
 
 a:hover {
 	color: #507dbe;
-}*/
+}
 
 
 /* =============================================================================
