--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="p2 wrap">
     <div class="measure mt1 center">
       <small>
-				© 2015 Dain Miller
+				© 2016 Yu Wang
       </small>
     </div>
   </div>
