--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,13 +28,13 @@
 <section class='container'>
     <section id='posts'>
         <header class='blog-header' role='banner'>
-        <a class="logo" href="/"></a>
+
         <h1 class='blog-title'>
-        TinyPress
+        Hello World?!
         </h1>
         <h2 class='blog-author'>
-        Company blog written by 
-        <a href="http://dain.io">Dain Miller</a>
+        Personal blog written by 
+        <a href="http://ywang-purdue.github.io">Yu Wang</a>
         </h2>
         </header>
 
