--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <header class='blog-header' role='banner'>
 
         <h1 class='blog-title'>
-        Hello World?!
+        Hello
         </h1>
         <h2 class='blog-author'>
         Personal blog written by 
