--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
         Hello
         </h1>
         <h2 class='blog-author'>
-        Personal blog written by 
+        Powered by the lovely open source project: Jekyll
         <a href="http://ywang-purdue.github.io">Yu Wang</a>
         </h2>
         </header>
