--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,9 @@
       <small>
 				© 2016 Yu Wang
       </small>
+      <small>
+				Powered by <a href="http://jekyllrb.com/">lovely open source project: Jekyll</a>
+      </small>
     </div>
   </div>
 </footer>
