--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <header class='blog-header' role='banner'>
 
         <h1 class='blog-title'>
-        Hello
+        Deeper Vision
         </h1>
         <h2 class='blog-author'>
         <a href="http://ywang-purdue.github.io">Yu Wang</a>
